<resources>
    <string name="app_name">Caffy</string>
    <string name="choice_your_n_favourite_coffee">Choice your\n Favourite Coffee</string>
    <string name="get_started">Get Started</string>
    <string name="search">Search</string>
    <string name="popular_coffees">Popular Coffees</string>
    <string name="cart">Cart</string>
    <string name="explorer">Explorer</string>
    <string name="profile">Profile</string>
    <string name="my_order">My order</string>
    <string name="wishlist">Wishlist</string>
    <string name="apply">Apply</string>
    <string name="your_daily_dose_n_of_caffy">Your Daily Dose\n of Caffy</string>
    <string name="default_web_client_id">275416834471-56mq9tsir5spe7bputjvvr511l3on4nk.apps.googleusercontent.com</string>

</resources>